# LiDAR-SimpleClassificator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
training/: network.py  trainer.py
training/dataset/: lidar_dataset.py  preprocessing.py
utils/: logger.py
