[project]
name = "lidar-ml"
version = "0.1.0"
author = "Juan David Guevara Arévalo"
license = "Apache-2.0"
description = "This project exposes a simple approach to train and save a classificator model for LiDAR's point-cloud encodings."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
